[package]
name = "bereal"
version = "0.3.0"
description = "A library that wraps the bereal.devin.fun API for getting bereal moment data"
authors = ["Willow GHOST <ghostdevbusiness@gmail.com> (willow.sh)"]
repository = "https://github.com/ghostdevv/bereal-rs"
license = "MIT"
edition = "2021"
resolver = "2"

[dependencies]
chrono = { version = "0.4.37", optional = true }
clap = { version = "4.5.4", features = ["derive", "env"], optional = true }
color-eyre = { version = "0.6.3", optional = true }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

[features]
cli = ["dep:clap", "dep:color-eyre", "dep:chrono"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "bereal"
path = "src/main.rs"
required-features = ["cli"]
